# HuffmanArchiver

./: CMakeLists.txt  README.md
include/: archiver.h  binary.h  huffman.h
src/: archiver.cpp  binary.cpp  huffman.cpp  main.cpp
test/: auto_test.cpp  auto_test.h  huffman_test.cpp  huffman_test.h  test.cpp
